src/core/jit/snapshots/tailcall__core__jit__response__test__conversion_to_async_graphql.snap
---
source: src/core/jit/response.rs
expression: async_response
---
Response {
    data: Null,
    extensions: {},
    cache_control: CacheControl {
        public: true,
        max_age: 0,
    },
    errors: [
        ServerError {
            message: "TypeName shape doesn't satisfy the processed object",
            locations: [
                Pos(3:4),
            ],
            path: [],
            extensions: None,
        },
        ServerError {
            message: "internal: non-null types require a return value",
            locations: [
                Pos(1:2),
            ],
            path: [],
            extensions: None,
        },
    ],
    http_headers: {},
}
