src/core/jit/snapshots/tailcall__core__jit__response__test__merging_of_errors.snap
---
source: src/core/jit/response.rs
expression: merged_resp
---
{
  "data": null,
  "errors": [
    {
      "message": "Error-1"
    },
    {
      "message": "Error-2",
      "locations": [
        {
          "line": 0,
          "column": 0
        }
      ]
    }
  ]
}
