src/core/jit/snapshots/tailcall__core__jit__response__test__merging_of_responses.snap
---
source: src/core/jit/response.rs
expression: merged_response
---
{
  "data": {
    "me": {
      "id": 1,
      "name": "John Smith",
      "birthday": "2023-03-08T12:45:26-05:00"
    },
    "__type": {
      "name": "User",
      "fields": [
        {
          "name": "birthday",
          "type": {
            "name": "Date"
          }
        },
        {
          "name": "id",
          "type": {
            "name": "String"
          }
        }
      ]
    }
  }
}
