src/core/jit/snapshots/tailcall__core__jit__response__test__with_error.snap
---
source: src/core/jit/response.rs
expression: response
---
Response {
    data: Null,
    errors: [
        ServerError {
            message: "internal: non-null types require a return value",
            locations: [
                Pos(1:2),
            ],
            path: [],
            extensions: None,
        },
    ],
    extensions: [],
    cache_control: CacheControl {
        max_age: 0,
        public: true,
    },
}
